src/objects/moySin__c.object
<CustomObject>
    <fields>
        <fullName>Cause_Mismatches__c</fullName>
        <label>Cause _Mismatches</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Index1__c</fullName>
        <label>Index1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index2__c</fullName>
        <label>Index2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>moySin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Task_6 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>moySins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>